[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "git-commits-graph"
version = "0.1.3"
description = "Display graph of changes in number of lines in project or changed lines"
authors = [{name="Krystian Safjan", email="ksafjan@gmail.com"}]
#authors = ["Krystian Safjan <ksafjan@gmail.com>"]
license = { text = "MIT" }
#license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
git-commits-graph = 'git_commits_graph.main:main'

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.27"
click = "^8.1.3"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
plotly = "^5.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pre-commit = "^3.2.1"
tox = "^3.7.0"
tox-poetry = "^0.5.0"
mock = "^5.0.1"

[tool.poetry.group.dev.dependencies]
tox = "^3.7.0"

[project.urls]
"Source" = "https://github.com/izikeros/git-commits-graph"
"Bug Tracker" = "https://github.com/izikeros/git-commits-graph/issues"
