[metadata]
name = git-commit-graph
version = 0.1.0
author = Krystian Safjan
author_email = ksafjan@gmail.com
description = "Display plot of changes in repo - count of lines or changed lines"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/izikeros/git-commits-graph
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    git-commits-graph = git_commits_graph.main:main

[options]
packages = find:
install_requires =
    GitPython
    click
    pandas
    matplotlib
python_requires = >=3.8

[options.packages.find]
where = .
